mysql/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-virtualservice
spec:
  hosts:
  - "mysql"
  tcp:
  - route:
    - destination:
        host: mysql
        subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mysql-destinationrule
spec:
  host: mysql
  subsets:
  - name: v1
    labels:
      version: v1
